RM#103091 Update CurrencyConversionService using Java map and HTTPRequest